[workspace]
resolver = "2"
members = [
    "example-pages-generator",
    "readme-generator",
    "monstertruck-assembly",
    "monstertruck-core",
    "monstertruck-derive",
    "monstertruck-geometry",
    "monstertruck-traits",
    "monstertruck-wasm",
    "monstertruck-meshing",
    "monstertruck-modeling",
    "monstertruck-platform",
    "monstertruck-mesh",
    "monstertruck-render",
    "monstertruck-solid",
    "monstertruck-step",
    "monstertruck-topology",
]

[workspace.dependencies]

# External dependencies
array-macro = "2"
bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1"
derive_more = { version = "2", features = ["full"] }
env_logger = "0.11"
getrandom = { version = "0.3", features = ["wasm_js"] }
image = "0.25"
itertools = "0.14"
parking_lot = "0.12"
pollster = "0.4"
proptest = "1"
rand = "0.9"
rayon = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
thiserror = "2"
# Internal crates
monstertruck-assembly = { version = "0.1.0", path = "monstertruck-assembly" }
monstertruck-core = { version = "0.5.0", path = "monstertruck-core" }
monstertruck-derive = { version = "0.1.0", path = "monstertruck-derive" }
monstertruck-geometry = { version = "0.5.0", path = "monstertruck-geometry" }
monstertruck-traits = { version = "0.4.0", path = "monstertruck-traits" }
monstertruck-meshing = { version = "0.4.0", path = "monstertruck-meshing" }
monstertruck-modeling = { version = "0.6.0", path = "monstertruck-modeling" }
monstertruck-platform = { version = "0.6.0", path = "monstertruck-platform" }
monstertruck-mesh = { version = "0.6.0", path = "monstertruck-mesh" }
monstertruck-solid = { version = "0.4.0", path = "monstertruck-solid" }
monstertruck-step = { version = "0.3.0", path = "monstertruck-step" }
monstertruck-topology = { version = "0.6.0", path = "monstertruck-topology" }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
web-time = "1"
winit = "0.30"

[profile.release.package.monstertruck-wasm]
opt-level = "z"
