[workspace]
resolver = "2"
members = [
	"truck-assembly",
	"truck-base",
	"truck-derivers",
	"truck-drafting",
	"truck-geometry",
	"truck-geotrait",
	"truck-js",
	"truck-meshalgo",
	"truck-modeling",
	"truck-platform",
	"truck-polymesh",
	"truck-rendimpl",
	"truck-shapeops",
	"truck-stepio",
	"truck-topology",
	"example-pages-generator",
	"readme-generator",
]

[profile.release.package.truck-js]
opt-level = "z"
