[package]
name = "monstertruck-core"
version = "0.1.1"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Core types and traits for linear algebra, curves, surfaces, and tolerances"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
cgmath = { workspace = true }
matext4cgmath = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
