[package]
name = "monstertruck-derive"
version = "0.1.1"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Derive macros for geometric traits"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
