[package]
name = "monstertruck-geometry"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Geometric primitives: knot vectors, B-splines, NURBS, and T-splines"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
parking_lot = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
monstertruck-core = { workspace = true }
monstertruck-traits = { workspace = true, features = ["derive"] }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true, features = ["attr-macro"] }
monstertruck-traits = { workspace = true, features = ["derive", "polynomial"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { workspace = true }
