[package]
name = "monstertruck-gpu"
version = "0.1.1"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Graphics utility crate built on wgpu"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
bytemuck = { workspace = true }
derive_more = { workspace = true }
futures-intrusive = { workspace = true }
rustc-hash = { workspace = true }
monstertruck-core = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true }
web-time = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
log = { workspace = true }
naga = { workspace = true }
pollster = { workspace = true }
rayon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Location"] }
