[package]
name = "monstertruck-meshing"
version = "0.1.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Tessellation and meshing algorithms for B-rep shapes"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics", "mesh"]
categories = ["graphics"]

[features]
analyzers = []
filters = []
tessellation = ["spade", "filters"]
vtk = ["vtkio"]
default = ["analyzers", "filters", "tessellation", "vtk"]

[dependencies]
array-macro = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
spade = { workspace = true, optional = true }
monstertruck-core = { workspace = true }
monstertruck-geometry = { workspace = true }
monstertruck-mesh = { workspace = true }
monstertruck-topology = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = { workspace = true }
vtkio = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
monstertruck-modeling = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { workspace = true }
