[package]
name = "monstertruck-modeling"
version = "0.1.1"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Integrated geometric and topological modeling algorithms"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[features]
default = []
fillet = ["monstertruck-solid"]
font = ["dep:rayon", "dep:ttf-parser"]

[dependencies]
derive_more = { workspace = true }
itertools = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
monstertruck-core = { workspace = true }
monstertruck-geometry = { workspace = true }
monstertruck-traits = { workspace = true, features = ["derive"] }
monstertruck-mesh = { workspace = true }
monstertruck-solid = { workspace = true, optional = true }
monstertruck-topology = { workspace = true }
rayon = { workspace = true, optional = true }
ttf-parser = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
