[package]
name = "monstertruck-render"
version = "0.1.1"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "Shape and polygon mesh visualization"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]
exclude = ["*.png"]

[features]
default = []
webgl = ["monstertruck-gpu/webgl"]

[dependencies]
bytemuck = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
monstertruck-gpu = { workspace = true }
monstertruck-mesh = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
env_logger = { workspace = true }
pollster = { workspace = true }
rayon = { workspace = true }
serde_json = { workspace = true }
monstertruck-meshing = { workspace = true }
monstertruck-modeling = { workspace = true }
winit = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Location"] }
web-time = { workspace = true }
