[package]
name = "monstertruck-step"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "STEP file import and export"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[features]
default = ["in", "derive"]
in = ["derive", "derive_more", "ruststep", "serde", "monstertruck-traits"]
derive = ["monstertruck-derive"]

[dependencies]
chrono = { workspace = true }
derive_more = { workspace = true, optional = true }
ruststep = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
monstertruck-assembly = { workspace = true }
monstertruck-derive = { workspace = true, optional = true }
monstertruck-geometry = { workspace = true }
monstertruck-traits = { workspace = true, optional = true }
monstertruck-modeling = { workspace = true }
monstertruck-mesh = { workspace = true }
monstertruck-topology = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
espr-derive = { workspace = true }
itertools = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
monstertruck-meshing = { workspace = true }
monstertruck-solid = { workspace = true }
