[package]
name = "monstertruck-topology"
version = "0.6.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "topological structs: vertex, edge, wire, face, shell, and solid"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[features]
default = ["rclite"]
nightly = ["parking_lot/nightly"]

[dependencies]
parking_lot = { workspace = true }
rayon = { workspace = true }
rclite = { version = "0.3.0", optional = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
monstertruck-core = { workspace = true }
monstertruck-traits = { workspace = true }

[dev-dependencies]
