[package]
name = "monstertruck-traits"
version = "0.4.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Defines geometric traits for truck"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["monstertruck-derive"]
polynomial = []

[dependencies]
rand = { workspace = true }
thiserror = { workspace = true }
monstertruck-core = { workspace = true }
monstertruck-derive = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
