[package]
name = "monstertruck-wasm"
version = "0.2.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Javascript wrapper for truck"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = { workspace = true }
gloo = "0.11.0"
js-sys = "0.3.85"
serde_json = { workspace = true }

monstertruck-meshing = { workspace = true }
monstertruck-modeling = { workspace = true }
monstertruck-solid = { workspace = true }
monstertruck-step = { workspace = true }
monstertruck-topology = { workspace = true }

wasm-bindgen = "0.2.108"
