[package]
name = "monstertruck-wasm"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>", "Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
description = "WebAssembly/JavaScript bindings"
homepage = "https://github.com/virtualritz/truck"
repository = "https://github.com/virtualritz/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_more = { workspace = true }
gloo = { workspace = true }
js-sys = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }

monstertruck-meshing = { workspace = true }
monstertruck-modeling = { workspace = true }
monstertruck-solid = { workspace = true }
monstertruck-step = { workspace = true }
monstertruck-topology = { workspace = true }
