[package]
name = "truck-base"
version = "0.1.1"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2018"
description = "Basic structs and traits: importing cgmath, curve and surface traits, tolerance, etc..."
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0.123", features = ["derive"] }
