[package]
name = "truck-base"
version = "0.4.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Basic structs and traits: importing cgmath, curve and surface traits, tolerance, etc..."
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
cgmath = { version = "0.18.0", features = ["serde"] }
matext4cgmath = "0.1.0"
serde = { version = "1.0.204", features = ["derive"] }
rustc-hash = "1.1.0"
