[package]
name = "truck-derivers"
version = "0.1.0"
edition = "2021"
description = "Derive macros generating an impl of the geometric traits."
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.91"
syn = { version = "2.0.89", features = ["derive", "printing"] }
proc-macro-error = "1.0.4"
