[package]
name = "truck-drafting"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.1.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
truck-base = { version = "0.5.0", path = "../truck-base" }
truck-geometry = { version = "0.5.0", path = "../truck-geometry" }
truck-geotrait = { version = "0.4.0", path = "../truck-geotrait", features = ["derive"] }
truck-topology = { version = "0.6.0", path = "../truck-topology" }
