[package]
name = "truck-featwgpu"
version = "0.1.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "*"
cgmath = "*"
futures = "*"
image = "*"
truck-polymesh = {path = "../truck-polymesh"}
truck-modeling = {path = "../truck-modeling"}
wgpu = "*"

[build-dependencies]
glsl-to-spirv = "*"

[dev-dependencies]
winit = "*"
stringreader = "*"
