[package]
name = "truck-geoderive"
version = "0.1.0"
edition = "2021"
description = "Derive macros generating an impl of the geometric traits."
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.18"
proc-macro2 = "1.0.39"
syn = { version = "1.0.96", features = ["derive", "printing"] }
proc-macro-error = "1.0.4"
