[package]
name = "truck-geometry"
version = "0.5.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "geometrical structs: knot vector, B-spline and NURBS"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

keywords = ["truck", "graphics"]
categories = ["graphics"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
truck-base = { workspace = true }
truck-geotrait = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }

[dev-dependencies]
truck-geotrait = { workspace = true, features = ["derive", "polynomial"] }
proptest = { workspace = true, features = ["attr-macro"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { workspace = true }
