[package]
name = "truck-geotrait"
version = "0.3.0"
authors = ["Yoshinori Tanimura <tanimura@ricos.co.jp>"]
edition = "2021"
description = "Defines geometric traits for truck"
homepage = "https://github.com/ricosjp/truck"
repository = "https://github.com/ricosjp/truck"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
derive = ["truck-geoderive"]

[dependencies]
truck-base = { version = "0.4.0", path = "../truck-base" }
rand = "0.8.5"
thiserror = "1.0.50"
truck-geoderive = { version = "0.1.0", path = "../truck-geoderive", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
